--- a/frontend/pages/text-based-summerize.html
+++ b/frontend/pages/text-based-summerize.html
@@ -112,7 +112,7 @@
             <div class="card d-flex blur justify-content-center p-2 shadow-lg my-sm-0 my-sm-5 mt-0 mb-3"style="background : linear-gradient(0deg, #bdc3c7 0%, #2c3e50 100%) !important;">
               <div class="text-center">
                 
-                <h3 class="text-light font-weight-bold">Text Based Character Design</h3>
+                <h3 class="text-light font-weight-bold">Summerize Mode</h3>
                 <p class="mb-0 p-1 text-light bg-gradient-dark" >
                   Give a character description / narration based on your imagination. You can also use a character script for your game.
                 </p>
