--- a/frontend/pages/about-us.html
+++ b/frontend/pages/about-us.html
@@ -87,7 +87,7 @@
       <div class="row">
         <div class="col-12 mx-auto">
           <div class="row py-lg-7 py-2 mt-2">
-            <h3>Avatar Creater</h3>
+            <h3>Avatar Creater<h3>
           </div>
         </div>
       </div>
@@ -101,7 +101,7 @@
       <span class="mask bg-gradient-info opacity-8"></span>
       <div class="container">
         <div class="row">
-          <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" href="./pages/author.html" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom">
+          <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" href="C:\Users\Lahiru\Desktop\UDITH\U\frontend\pages\ArtifactGenerator.html" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom">
             <p></p>
             &nbsp;
             <h4 class="text-light font-weight-bold">Artifact Generator</h4>
